--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,14 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <version>3.0.0-M8</version>
       </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <source>20</source>
+          <target>20</target>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
 
